--- a/demo/res/values/colors.xml
+++ b/demo/res/values/colors.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="grid_item_bg_normal">#FFF</color>
-    <color name="light_red">#FAA</color>
+    <color name="light_red">#44ff00ff</color>
 </resources>
